# red-hat-ai-examples

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  TESTING.md  TESTING_QUICKSTART.md  pyproject.toml  pytest.ini
.github/: mergify.yml
.github/workflows/: code-quality.yml  e2e-kfp.yml  e2e-quick.yml  e2e-rhoai.yml  e2e-tekton.yml  e2e-tests.yml  linting.yml  security-scanning.yml  tests.yml
assets/usecase/knowledge-tuning/: Knowledge Tuning Workflow.excalidraw
docs/: E2E_TESTING_PLAN.md
examples/fine-tuning/osft/: README.md
examples/fine-tuning/rhoai-3.2/osft/: README.md  osft-example.ipynb
examples/fine-tuning/rhoai-3.2/training-hub/sft/: README.md  sft.ipynb
examples/fine-tuning/training-hub/sft/: sft.ipynb
examples/knowledge-tuning/: .env.example  README.md
examples/knowledge-tuning/00_Setup/: .env.example  00_Setup_README.md
examples/knowledge-tuning/01_Base_Model_Evaluation/: 01_Base_Model_Evaluation_README.md  Base_Model_Evaluation.ipynb
examples/knowledge-tuning/02_Data_Processing/: 02_Data_Processing_README.md  Data_Processing.ipynb  pyproject.toml
examples/knowledge-tuning/03_Knowledge_Generation/: 03_Knowledge_Generation_README.md  Knowledge_Generation.ipynb
examples/knowledge-tuning/04_Knowledge_Mixing/: 04_Knowledge_Mixing_README.md  Knowledge_Mixing.ipynb
examples/knowledge-tuning/05_Model_Training/: 05_Model_Training_README.md  Model_Training.ipynb
examples/knowledge-tuning/06_Evaluation/: 06_Evaluation_README.md  Evaluation.ipynb
examples/llmcompressor/: workbench_example.ipynb
examples/model-serve-flow/: README.md
examples/model-serve-flow/00_Setup/: 00_Setup_README.md
examples/model-serve-flow/01_Base_Accuracy_Benchmarking/: 01_Base_Accuracy_Benchmarking_README.md  Base_Accuracy_Benchmarking.ipynb  pyproject.toml  utils.py
examples/model-serve-flow/02_Base_Performance_Benchmarking/: 02_Base_Performance_Benchmarking_README.md  Base_Performance_Benchmarking.ipynb  pyproject.toml
examples/model-serve-flow/03_Model_Compression/: 03_Model_Compression_README.md  Model_Compression.ipynb  pyproject.toml  utils.py
examples/model-serve-flow/04_Compressed_Accuracy_Benchmarking/: 04_Compressed_Accuracy_Benchmarking_README.md  Compressed_Accuracy_Benchmarking.ipynb  pyproject.toml
examples/model-serve-flow/05_Compressed_Performance_Benchmarking/: 05_Compressed_Performance_Benchmarking_README.md  Compressed_Performance_Benchmarking.ipynb  utils.py
examples/model-serve-flow/06_Comparison/: 06_Comparison_README.md  Accuracy_Comparison.md  Performance_Comparison.md
examples/model-serve-flow/07_Deployment/: RHOAI_Deployment_README.md  VLLM_Deployment_README.md
examples/model-serve-flow/assets/: flow_diagram.excalidraw  model-serve-flow.excalidraw
examples/model-serve-flow/docs/: Accuracy_Evaluation.md  Compression.md  Model_Serving_vLLM.md  System_Level_Performance_Benchmarking.md
examples/trainer/progress-tracking/: README.md  progress-tracking-example.ipynb
infrastructure/: __init__.py
infrastructure/config/: cluster_profiles.yaml
infrastructure/notebook/: __init__.py  executor.py
infrastructure/rhoai/: __init__.py  client.py
scripts/: run_e2e_poc.py
tests/: README.md  conftest.py  test_config.py
tests/e2e/: README.md  __init__.py  conftest.py  env_example.txt  test_kfp_pipeline.py  test_knowledge_tuning.py  test_llmcompressor.py  test_osft.py  test_poc_strategies.py  test_training_hub_sft.py
tests/e2e/knowledge_tuning/: README.md  RHOAI_INSTRUCTIONS.md  __init__.py  config.py  conftest.py  run_e2e.py  test_e2e_pipeline.py
tests/e2e/knowledge_tuning/kfp/: README.md  __init__.py  components.py  pipeline.py  submit_pipeline.py
tests/e2e/knowledge_tuning/rhoai/: GITHUB_ACTIONS_SETUP.md  README.md  __init__.py  openshift-pipeline.yaml  scheduled-e2e-job.yaml  setup-github-runner.sh
tests/e2e/knowledge_tuning/rhoai/tekton/: README.md  pipeline-e2e.yaml  pipeline-single-pod.yaml  resources.yaml  setup-admin.yaml  task-e2e-single-pod.yaml  task-notebook-runner.yaml  trigger-pipeline.sh
tests/integration/: test_data_formats.py  test_dependencies.py
tests/notebooks/: notebooks_manifest.yaml  test_notebook_validation.py
tests/unit/: test_flash_attn_installer.py  test_knowledge_utils.py
tests/validation/: test_notebook_content.py
