[project]
name = "Data_Processing"
version = "0.1.0"
description = "A project for processing the data for SDG"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.0",
    "datasets>=4.2.0",
    "docling>=2.53.0",
    "markdown-it-py>=4.0.0",
    "tiktoken>=0.11.0",
    "python-dotenv>=1.1.1"
]
